# ASI-Code

./: .gitignore  CLI_API_COLLABORATION_EN.md  CLI_API_COLLABORATION_ZH.md  CONTRIBUTING.md  Cargo.toml  GITHUB_REPO_COPY_BILINGUAL.md  INSTALL_WINDOWS.md  LICENSE  README.md  RELEASE_NOTES_v0.3.0-beta.1.md  SECURITY.md  start_asi.cmd  start_asi.ps1  start_asi.sh
.cargo/: config.toml
.github/: DISCUSSIONS_SETUP.md  FUNDING.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: PUBLISH_CHECKLIST.md  RELEASE_NOTES_v0.3.0.md
scripts/windows/: asi_launcher.rs  benchmark_regression.ps1  ci_gate_rules.template.json  ci_machine_json.ps1  install_asi.ps1  package_release.ps1  render_smoke_summary.ps1  run_smoke_recipes.ps1  smoke.ps1  smoke_all.ps1  smoke_api_compat.ps1  smoke_api_compat_min.ps1  smoke_checkpoint.ps1  smoke_gateway.ps1  smoke_hook_matrix.ps1  smoke_hooks_cli_advanced.ps1  smoke_prompt_jsonl.ps1  smoke_provider_model.ps1  smoke_review_json.ps1  smoke_strict_quick.ps1  smoke_subagent.ps1  smoke_tokenizer_timeout.ps1  uninstall_asi.ps1  validate_ci_machine_report.ps1
src/: audit.rs  autoresearch.rs  bench.rs  config.rs  cost.rs  cron.rs  error.rs  gateway.rs  git_tools.rs  json_toolcall.rs  main.rs  markdown.rs  mcp.rs  memory.rs  meta.rs  notebook.rs  oauth.rs  permissions.rs  plugin.rs  policy.rs  provider.rs  research.rs  runtime.rs  security.rs  self_update.rs  session.rs  skills.rs  telemetry.rs  todo.rs  tokenizer.rs  tools.rs  ui.rs  voice.rs  wiki.rs  worktree.rs
(+33 files in other folders)
